samples/_failures_safe/1761088425_a4ae64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21a825db.c: In function ‘main’:
./samples/SAFE/__tmp_21a825db.c:172:22: error: expected ‘;’ at end of input
  172 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_21a825db.c:172:5: error: expected declaration or statement at end of input
  172 |     for (int i = 0; i
      |     ^~~
